k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kronfort
  labels:
    app: kronfort
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kronfort
  template:
    metadata:
      labels:
        app: kronfort
    spec:
      containers:
        - name: kronfort
          image: kronfort-frontend:latest  # Will be updated dynamically in CI/CD
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: dockerhub-secret
