k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kronfort
spec:
  type: NodePort
  selector:
    app: kronfort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
